--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <section id="profile">
         <div class="section__pic-container">
-        <img src="assets/profile-pic.png" alt="Siddhesh Bangar Profile Picture" />
+        <img src="assets/profile-photo.png" alt="Siddhesh Bangar Profile Picture" />
         </div>
         <div class="section__text">
             <p class="section__text__p1">Hello I'm</p>
@@ -67,19 +67,19 @@
       <h1 class="title">About me</h1>
       <div class="section-container">
         <div class="section__pic-container">
-          <img src="./assets/about-pic.png" alt="Profile Picture" class="about-pic" />
+          <img src="./assets/photo.JPG" alt="Profile Picture" class="about-pic" />
         </div>
         <div class="about-details-container">
           <div class="about-containers">
             <div class="details-container">
               <img src="./assets/experience.png" alt="Experience Icon" class="icon">
               <h3>Experience</h3>
-              <p>1+ years <br />AI Software Developer</p>
+              <p>1+ years <br />AI Researcher and Developer</p>
             </div>
             <div class="details-container">
               <img src="./assets/education.png" alt="Education Icon" class="icon">
               <h3>Education</h3>
-              <p>Bachelors of Engineering<br />Computer Engineering</p>
+              <p>Bachelors in<br />Computer Engineering</p>
             </div>
             </div>
             <div class="text-container">
@@ -98,95 +98,95 @@
       <div class="experience-details-container">
         <div class="about-containers">
           <div class="details-container">
-            <h2 class="experience-sub-title">AI Software Developer</h2>
+            <h2 class="experience-sub-title">Data Science & AI</h2>
             <div class="article-container">
               <article>
-                <img src="./assets//checkmark.png" alt="Experience icon" class="icon">
+                <img src="./assets//python.png" alt="Experience icon" class="icon">
                 <div> 
-                  <h3>HTML</h3>
+                  <h3>Python</h3>
                   <p>Experienced</p>
                 </div>
               </article>
               <article>
-                <img src="./assets//checkmark.png" alt="Experience icon" class="icon">
+                <img src="./assets//r.svg" alt="Experience icon" class="icon">
                 <div> 
-                  <h3>CSS</h3>
+                  <h3>R Language</h3>
+                  <p>Intermediate</p>
+                </div>
+              </article>
+              <article>
+                <img src="./assets//sql-server.png" alt="Experience icon" class="icon">
+                <div> 
+                  <h3>SQL</h3>
+                  <p>Intermediate</p>
+                </div>
+              </article>
+              <article>
+                <img src="./assets//tensorflow.svg" alt="Experience icon" class="icon">
+                <div> 
+                  <h3>Tensorflow</h3>
+                  <p>Intermediate</p>
+                </div>
+              </article>
+              <article>
+                <img src="./assets//pytorch.svg" alt="Experience icon" class="icon">
+                <div> 
+                  <h3>PyTorch</h3>
                   <p>Experienced</p>
                 </div>
               </article>
               <article>
-                <img src="./assets//checkmark.png" alt="Experience icon" class="icon">
+                <img src="./assets//powerbi.svg" alt="Experience icon" class="icon">
                 <div> 
-                  <h3>Javascript</h3>
-                  <p>Experienced</p>
-                </div>
-              </article>
-              <article>
-                <img src="./assets//checkmark.png" alt="Experience icon" class="icon">
-                <div> 
-                  <h3>HTML</h3>
-                  <p>Experienced</p>
-                </div>
-              </article>
-              <article>
-                <img src="./assets//checkmark.png" alt="Experience icon" class="icon">
-                <div> 
-                  <h3>HTML</h3>
-                  <p>Experienced</p>
-                </div>
-              </article>
-              <article>
-                <img src="./assets//checkmark.png" alt="Experience icon" class="icon">
-                <div> 
-                  <h3>HTML</h3>
-                  <p>Experienced</p>
+                  <h3>Power BI</h3>
+                  <p>Intermediate</p>
                 </div>
               </article>
             </div>
           </div>
           <div class="details-container">
-            <h2 class="experience-sub-title">AI Software Developer</h2>
+            <h2 class="experience-sub-title">Developer</h2>
             <div class="article-container">
               <article>
                 <img src="./assets//checkmark.png" alt="Experience icon" class="icon">
                 <div> 
-                  <h3>HTML</h3>
+                  <h3>Java</h3>
+                  <p>Intermediate</p>
+                </div>
+              </article>
+              <article>
+                <img src="./assets//github.svg" alt="Experience icon" class="icon">
+                <div> 
+                  <h3>Git/Github</h3>
                   <p>Experienced</p>
                 </div>
               </article>
               <article>
-                <img src="./assets//checkmark.png" alt="Experience icon" class="icon">
+                <img src="./assets//docker.svg" alt="Experience icon" class="icon">
                 <div> 
-                  <h3>CSS</h3>
-                  <p>Experienced</p>
+                  <h3>Docker</h3>
+                  <p>Basic</p>
+                </div>
+              </article> <br>
+              <article>
+                <img src="./assets//html5.svg" alt="Experience icon" class="icon">
+                <div> 
+                  <h3>HTML & CSS</h3>
+                  <p>Intermediate</p>
                 </div>
               </article>
               <article>
-                <img src="./assets//checkmark.png" alt="Experience icon" class="icon">
+                <img src="./assets//cplusplus.svg" alt="Experience icon" class="icon">
                 <div> 
-                  <h3>Javascript</h3>
-                  <p>Experienced</p>
+                  <h3>C / C++</h3>
+                  <p>Basic</p>
                 </div>
               </article>
               <article>
-                <img src="./assets//checkmark.png" alt="Experience icon" class="icon">
+                <img src="./assets//amazonwebservices.svg" alt="Experience icon" class="icon">
                 <div> 
-                  <h3>HTML</h3>
-                  <p>Experienced</p>
-                </div>
-              </article>
-              <article>
-                <img src="./assets//checkmark.png" alt="Experience icon" class="icon">
-                <div> 
-                  <h3>HTML</h3>
-                  <p>Experienced</p>
-                </div>
-              </article>
-              <article>
-                <img src="./assets//checkmark.png" alt="Experience icon" class="icon">
-                <div> 
-                  <h3>HTML</h3>
-                  <p>Experienced</p>
+                  <h3>AWS</h3>
+                  <p>Intermediate</p>
                 </div>
               </article>
             </div>
