--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="btn-container">
                 <button
                 class="btn btn-color-2"
-                onclick="window.open('./assets/resume-example.pdf')">
+                onclick="window.open('./assets/SiddheshBangar_CV.pdf')">
             Download CV
         </button>
         <button class="btn btn-color-1" onclick="location.href='./#contact'">
@@ -84,7 +84,10 @@
             </div>
             <div class="text-container">
               <p>
-                I am a Data Scientist and AI Developer with 1+ years of experience in developing AI models and software applications. I have a Bachelor's degree in Computer Engineering and I am passionate about AI and its applications. I have worked on various projects in the field of AI and Machine Learning and have developed models for various applications.
+                AI Software Developer and Researcher with 1+ years of experience in developing intelligent systems to address and consult
+complex issues for technical clients, as well as a strong background in data science and analysis. Proficient in deep learning and
+computer vision. Contributed to a prototype as a team member at MIDAS Labs, which resulted in a 20% improvement in accuracy
+for the client's technical app functionality.
               </p>
             </div>
           </div>
@@ -145,7 +148,7 @@
             </div>
           </div>
           <div class="details-container">
-            <h2 class="experience-sub-title">Developer</h2>
+            <h2 class="experience-sub-title">Software Developement</h2>
             <div class="article-container">
               <article>
                 <img src="./assets//checkmark.png" alt="Experience icon" class="icon">
@@ -198,38 +201,37 @@
 
     <section id="projects">
       <p class="section__text__p1">Browse my recent</p>
-      <h1 class="title">Projects</h1>
+      <h1 class="title">Projects & Publications</h1>
       <div class="experience-details-container">
         <div class="about-containers">
         <div class="details-container color-container">
           <div class="article-container">
-            <img src="./assets/project-1.png" alt="Project 1" class="project-img" />
+            <img src="./assets/Legal-Document.jpg" alt="Project 1" class="project-img" />
           </div>
-          <h2 class="experience-sub-title project-title">Project One</h2>
+          <h2 class="experience-sub-title project-title">Ranlaynet</h2>
           <div class="btn-container">
-            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">Github</button>
-            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">Live Demo</button>
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https://arxiv.org/pdf/2404.09530'">Paper</button>
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/midas-research/randomlaynet/tree/main'">Github</button>
           </div>
         </div>
         <div class="details-container color-container">
           <div class="article-container">
-            <img src="./assets/project-1.png" alt="Project 1" class="project-img" />
+            <img src="./assets/Table-Detection.png" alt="Project 1" class="project-img" />
           </div>
-          <h2 class="experience-sub-title project-title">Project One</h2>
+          <h2 class="experience-sub-title project-title">Tablecraft-OCR</h2>
           <div class="btn-container">
-            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">Github</button>
-            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">Live Demo</button>
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https://arxiv.org/pdf/2404.10305'">Paper</button>
           </div>
         </div>
         <div class="details-container color-container">
           <div class="article-container">
-            <img src="./assets/project-1.png" alt="Project 1" class="project-img" />
+            <img src="./assets/Grammar-Correction.jpg" alt="Project 1" class="project-img" />
           </div>
-          <h2 class="experience-sub-title project-title">Project One</h2>
+          <h2 class="experience-sub-title project-title">GEC-DCL</h2>
           <div class="btn-container">
-            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">Github</button>
-            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">Live Demo</button>
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https://link.springer.com/chapter/10.1007/978-3-031-49601-1_7'">Paper</button>
           </div>
+        </div>
         </div>
       </div>
       </div>
