--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Siddhesh Bangar</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
+    <link rel="icon" type="image/icon" href="assets/profile-photo.png">
   </head>
   <body>
     <nav id="desktop-nav">
@@ -67,7 +68,7 @@
       <h1 class="title">About me</h1>
       <div class="section-container">
         <div class="section__pic-container">
-          <img src="./assets/photo.JPG" alt="Profile Picture" class="about-pic" />
+          <img class="image-details" src="./assets/photo.JPG" alt="Profile Picture" class="about-pic" />
         </div>
         <div class="about-details-container">
           <div class="about-containers">
